--- a/css/home.css
+++ b/css/home.css
@@ -1,11 +1,11 @@
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
-img {vertical-align: middle; text-align: center; margin: auto;}
+img { text-align: center; margin-right: auto; margin-left: auto; margin-bottom: 0; display: block;} 
 p{
   margin-bottom: 0;
   color: white;
-  font-size: 1em;
+  font-size: 1.3em;
   padding: 2em;
   text-indent: 2em;
 }
@@ -15,37 +15,6 @@ p{
   max-width: 1000px;
   position: relative;
   margin: auto;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
 }
 
 .active {
@@ -73,4 +42,8 @@ p{
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
+}
+
+.hide {
+  display: none;
 }
